# automata-account-data-stream-binance

./: .env  Dockerfile  README.md  requirements.txt  setup.cfg
accountdata/: BinanceAccountDataStream.py  __main__.py
binance/: BinanceAccountDataStream.py  __main__.py
binance/auth/: BinanceAuthenticator.py
binance/message/trade/: BinanceTradeDataMessageProcessor.py
binance/message/trade/handler/: BinanceTradeDataMessageHandler.py
binance/message/trade/transform/: BinanceTradeMessageTransformer.py
binance/message/trade/transform/error/: OrderTransformException.py
binance/payload/: BinanceDataPayloadProcessor.py
simulations/api/: auth-listenkey-create.sh  auth-listenkey-delete.sh  auth-listenkey-refresh.sh
simulations/authconfig/: __init__.py
simulations/authlistenkey/: __init__.py
simulations/runprofile/: __init__.py
tests/binance/message/trade/transform/: BinanceTradeMessageTransformer_test.py
tests/helper/: BinanceTradeMessageTransformerHelper.py  ConfigReporterHolderHelper.py
