[metadata]
name = persuader-technology-automata-account-data-stream-binance
version = 0.0.1
description = Automata Binance Account Data Stream
long_description = file: README.md
long_description_content_type = text/markdown
author = Persuader Technology
author_email = software@persuader.technology
license = UNLICENSE
classifiers =
    Programming Language :: Python :: 3

[options.entry_points]
console_scripts =
    executable-name = accountdata.__main__

[options]
packages = find:
install_requires =
    requests>=2.27.1
    persuader-technology-automata-core>=0.4.0
    persuader-technology-automata-data-stream>=0.1.4
    persuader-technology-automata-trade-repository>=0.0.6
    persuader-technology-automata-position-repository>=0.0.7
    persuader-technology-automata-trade-transform-repository>=0.0.2
    persuader-technology-automata-config>=0.0.6

[options.packages.find]
include = binance*
exclude =
    tests
    simulations
    .scripts
