[metadata]
name = persuader-technology-automata-account-data-stream-binance
version = 0.0.7
description = Automata Binance Account Data Stream
long_description = file: README.md
long_description_content_type = text/markdown
author = Persuader Technology
author_email = software@persuader.technology
license = UNLICENSE
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    requests>=2.27.1
    persuader-technology-automata-core>=0.5.1
    persuader-technology-automata-utilities>=0.1.1
    persuader-technology-automata-redis>=0.1.8
    persuader-technology-automata-process-manager>=0.1.3
    persuader-technology-automata-data-stream>=0.2.0
    persuader-technology-automata-trade-repository>=0.1.2
    persuader-technology-automata-position-repository>=0.1.1
    persuader-technology-automata-trade-transform-repository>=0.0.5
    persuader-technology-automata-config>=0.1.1

[options.packages.find]
include = binance*
exclude =
    tests
    simulations
    .scripts

[options.entry_points]
console_scripts =
    automata-binance-account-data-stream-start = binance.__main__:start
